--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,5 +21,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 MYAPP_RELEASE_STORE_FILE=debug.keystore
 MYAPP_RELEASE_KEY_ALIAS=key0
-MYAPP_RELEASE_STORE_PASSWORD=pavagasu@87
-MYAPP_RELEASE_KEY_PASSWORD=pavagasu@87
+MYAPP_RELEASE_STORE_PASSWORD=asdf1234
+MYAPP_RELEASE_KEY_PASSWORD=asdf1234
