--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "appcenter-analytics": "2.2.0",
     "appcenter-crashes": "2.2.0",
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-code-push": "^5.6.1"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
